knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/iTriage_Responded_c__c.field-meta.xml
<CustomField>
    <fullName>iTriage_Responded_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>iTriage_Responded__c</externalDeveloperName>
    <label>iTriage Responded</label>
    <type>Checkbox</type>
</CustomField>