knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Job_Functions_c__c.field-meta.xml
<CustomField>
    <fullName>Job_Functions_c__c</fullName>
    <externalDeveloperName>Job_Functions__c</externalDeveloperName>
    <label>Job Functions</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>