knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Job_Opportunities_c__c.field-meta.xml
<CustomField>
    <fullName>Job_Opportunities_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Job_Opportunities__c</externalDeveloperName>
    <label>Job Opportunities</label>
    <type>Checkbox</type>
</CustomField>