knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Job_Role_c__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_c__c</fullName>
    <externalDeveloperName>Job_Role__c</externalDeveloperName>
    <label>Job Role</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>