knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Key_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Key_Contact__c</externalDeveloperName>
    <label>Key Contact</label>
    <type>Checkbox</type>
</CustomField>