knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Language_s_c__c.field-meta.xml
<CustomField>
    <fullName>Language_s_c__c</fullName>
    <externalDeveloperName>Language_s__c</externalDeveloperName>
    <label>Language(s)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>