knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Last_PFA_Created_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Last_PFA_Created_Date_c__c</fullName>
    <externalDeveloperName>Last_PFA_Created_Date__c</externalDeveloperName>
    <label>Last PFA Created Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>