knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Last_Reviewed_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Reviewed_Date_c__c</fullName>
    <externalDeveloperName>Last_Reviewed_Date__c</externalDeveloperName>
    <label>Last Reviewed Date</label>
    <type>Date</type>
</CustomField>