knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/LastCURequestDate__c.field-meta.xml
<CustomField>
    <fullName>LastCURequestDate__c</fullName>
    <externalDeveloperName>LastCURequestDate</externalDeveloperName>
    <label>Last Stay-in-Touch Request Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>