knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/LastCUUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>LastCUUpdateDate__c</fullName>
    <externalDeveloperName>LastCUUpdateDate</externalDeveloperName>
    <label>Last Stay-in-Touch Save Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>