knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/lat_c__c.field-meta.xml
<CustomField>
    <fullName>lat_c__c</fullName>
    <externalDeveloperName>lat__c</externalDeveloperName>
    <label>Latitude</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>