knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Lead_Form_Source_c__c.field-meta.xml
<CustomField>
    <fullName>Lead_Form_Source_c__c</fullName>
    <externalDeveloperName>Lead_Form_Source__c</externalDeveloperName>
    <label>Lead Form Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>