knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Lead_Source_Most_Recent_c__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Most_Recent_c__c</fullName>
    <externalDeveloperName>Lead_Source_Most_Recent__c</externalDeveloperName>
    <label>Lead Source - Most Recent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>