knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Lead_Upload_Update_c__c.field-meta.xml
<CustomField>
    <fullName>Lead_Upload_Update_c__c</fullName>
    <externalDeveloperName>Lead_Upload_Update__c</externalDeveloperName>
    <label>Lead Upload Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>