knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/LeadNurturingID_c__c.field-meta.xml
<CustomField>
    <fullName>LeadNurturingID_c__c</fullName>
    <externalDeveloperName>LeadNurturingID__c</externalDeveloperName>
    <label>Lead Nurturing</label>
    <length>18</length>
    <type>Text</type>
</CustomField>