knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Lex_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Lex_ID_c__c</fullName>
    <externalDeveloperName>Lex_ID__c</externalDeveloperName>
    <label>Lex ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>