knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/LinkedIn_Username_c__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Username_c__c</fullName>
    <externalDeveloperName>LinkedIn_Username__c</externalDeveloperName>
    <label>LinkedIn Username</label>
    <type>TextArea</type>
</CustomField>