knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Lock_c__c.field-meta.xml
<CustomField>
    <fullName>Lock_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Lock__c</externalDeveloperName>
    <label>Lock</label>
    <type>Checkbox</type>
</CustomField>