knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Locum_Doc_Start_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Locum_Doc_Start_Date_c__c</fullName>
    <externalDeveloperName>Locum_Doc_Start_Date__c</externalDeveloperName>
    <label>Locum Doc Start Date</label>
    <type>Date</type>
</CustomField>