knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Login_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Login_Name_c__c</fullName>
    <externalDeveloperName>Login_Name__c</externalDeveloperName>
    <label>Login Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>