knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Maiden_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Maiden_Name_c__c</fullName>
    <externalDeveloperName>Maiden_Name__c</externalDeveloperName>
    <label>Maiden Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>