knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/MailingStreet__c.field-meta.xml
<CustomField>
    <fullName>MailingStreet__c</fullName>
    <externalDeveloperName>MailingStreet</externalDeveloperName>
    <label>Mailing Street</label>
    <type>TextArea</type>
</CustomField>