knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Malpractice_Details_c__c.field-meta.xml
<CustomField>
    <fullName>Malpractice_Details_c__c</fullName>
    <externalDeveloperName>Malpractice_Details__c</externalDeveloperName>
    <label>Malpractice Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>