knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Manager_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email_c__c</fullName>
    <externalDeveloperName>Manager_Email__c</externalDeveloperName>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>