knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Manager_s_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Manager_s_Email_c__c</fullName>
    <externalDeveloperName>Manager_s_Email__c</externalDeveloperName>
    <label>Manager&apos;s Email</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>