knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Marital_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status_c__c</fullName>
    <externalDeveloperName>Marital_Status__c</externalDeveloperName>
    <label>Marital Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>