knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/MD_c__c.field-meta.xml
<CustomField>
    <fullName>MD_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>MD__c</externalDeveloperName>
    <label>MD</label>
    <type>Checkbox</type>
</CustomField>