knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/MDM_Mark_for_Deletion_c__c.field-meta.xml
<CustomField>
    <fullName>MDM_Mark_for_Deletion_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>MDM_Mark_for_Deletion__c</externalDeveloperName>
    <label>MDM Mark for Deletion</label>
    <type>Checkbox</type>
</CustomField>