knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Med_Dir_Acknowledgement_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Med_Dir_Acknowledgement_Activation_Date__c</fullName>
    <externalDeveloperName>Med_Dir_Acknowledgement_Activation_Date__c</externalDeveloperName>
    <label>Med Dir Acknowledgement Activation Date</label>
    <type>Date</type>
</CustomField>