knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Med_Lic_c__c.field-meta.xml
<CustomField>
    <fullName>Med_Lic_c__c</fullName>
    <externalDeveloperName>Med_Lic__c</externalDeveloperName>
    <label>Med Lic #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>