knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Med_Lic_Exp_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Med_Lic_Exp_Date_c__c</fullName>
    <externalDeveloperName>Med_Lic_Exp_Date__c</externalDeveloperName>
    <label>Med Lic Exp Date</label>
    <type>Date</type>
</CustomField>