knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Med_School_Completed_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Med_School_Completed_Date_c__c</fullName>
    <externalDeveloperName>Med_School_Completed_Date__c</externalDeveloperName>
    <label>Medical School Completed Date</label>
    <type>Date</type>
</CustomField>