knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Medical_Director_Acknowledgement_c__c.field-meta.xml
<CustomField>
    <fullName>Medical_Director_Acknowledgement_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Medical_Director_Acknowledgement__c</externalDeveloperName>
    <label>Medical Director Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>