knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Medical_School_c__c.field-meta.xml
<CustomField>
    <fullName>Medical_School_c__c</fullName>
    <externalDeveloperName>Medical_School__c</externalDeveloperName>
    <label>Medical School</label>
    <length>70</length>
    <type>Text</type>
</CustomField>