knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Middle_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name_c__c</fullName>
    <externalDeveloperName>Middle_Name__c</externalDeveloperName>
    <label>Middle Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>