knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Military_Branch_c__c.field-meta.xml
<CustomField>
    <fullName>Military_Branch_c__c</fullName>
    <externalDeveloperName>Military_Branch__c</externalDeveloperName>
    <label>Military Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>