knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Military_c__c.field-meta.xml
<CustomField>
    <fullName>Military_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Military__c</externalDeveloperName>
    <label>Military</label>
    <type>Checkbox</type>
</CustomField>