knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Military_Key_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Military_Key_Contact_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Military_Key_Contact__c</externalDeveloperName>
    <label>Military Key Contact</label>
    <type>Checkbox</type>
</CustomField>