knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Military_On_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Military_On_Date_c__c</fullName>
    <externalDeveloperName>Military_On_Date__c</externalDeveloperName>
    <label>Military On Date</label>
    <type>Date</type>
</CustomField>