knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Military_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Military_Status_c__c</fullName>
    <externalDeveloperName>Military_Status__c</externalDeveloperName>
    <label>Military Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>