knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Military_Title_c__c.field-meta.xml
<CustomField>
    <fullName>Military_Title_c__c</fullName>
    <externalDeveloperName>Military_Title__c</externalDeveloperName>
    <label>Military Title</label>
    <type>TextArea</type>
</CustomField>