knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Month_of_Birth_c__c.field-meta.xml
<CustomField>
    <fullName>Month_of_Birth_c__c</fullName>
    <externalDeveloperName>Month_of_Birth__c</externalDeveloperName>
    <label>Month of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>