knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Monthly_Newsletter_c__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Newsletter_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Monthly_Newsletter__c</externalDeveloperName>
    <label>Monthly Newsletter</label>
    <type>Checkbox</type>
</CustomField>