knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/NALS_c__c.field-meta.xml
<CustomField>
    <fullName>NALS_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>NALS__c</externalDeveloperName>
    <label>NALS</label>
    <type>Checkbox</type>
</CustomField>