knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Name_of_CEO_Administrator_c__c.field-meta.xml
<CustomField>
    <fullName>Name_of_CEO_Administrator_c__c</fullName>
    <externalDeveloperName>Name_of_CEO_Administrator__c</externalDeveloperName>
    <label>Name of CEO/Administrator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>