knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Name_Verification_Complete_c__c.field-meta.xml
<CustomField>
    <fullName>Name_Verification_Complete_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Name_Verification_Complete__c</externalDeveloperName>
    <label>Name Verification Complete</label>
    <type>Checkbox</type>
</CustomField>