knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/News_Updates_c__c.field-meta.xml
<CustomField>
    <fullName>News_Updates_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>News_Updates__c</externalDeveloperName>
    <label>News Updates</label>
    <type>Checkbox</type>
</CustomField>