knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Next_Reference_Check_Due_On_c__c.field-meta.xml
<CustomField>
    <fullName>Next_Reference_Check_Due_On_c__c</fullName>
    <externalDeveloperName>Next_Reference_Check_Due_On__c</externalDeveloperName>
    <label>Next Reference Check Due On</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>