knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Nickname_c__c.field-meta.xml
<CustomField>
    <fullName>Nickname_c__c</fullName>
    <externalDeveloperName>Nickname__c</externalDeveloperName>
    <label>Nickname(Goes By)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>