knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/No_of_Candidate_Prospect_PFA_c__c.field-meta.xml
<CustomField>
    <fullName>No_of_Candidate_Prospect_PFA_c__c</fullName>
    <externalDeveloperName>No_of_Candidate_Prospect_PFA__c</externalDeveloperName>
    <label># of Candidate or Prospects PFA&apos;s</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>