knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/No_of_Credentialed_Active_PFA_s_c__c.field-meta.xml
<CustomField>
    <fullName>No_of_Credentialed_Active_PFA_s_c__c</fullName>
    <externalDeveloperName>No_of_Credentialed_Active_PFA_s__c</externalDeveloperName>
    <label>No of Credentialed Active PFAs</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>