knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/No_of_References_Completed_c__c.field-meta.xml
<CustomField>
    <fullName>No_of_References_Completed_c__c</fullName>
    <externalDeveloperName>No_of_References_Completed__c</externalDeveloperName>
    <label>No of References Completed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>