knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/NP_c__c.field-meta.xml
<CustomField>
    <fullName>NP_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>NP__c</externalDeveloperName>
    <label>NP</label>
    <type>Checkbox</type>
</CustomField>