knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/NPPES_Specialty_c__c.field-meta.xml
<CustomField>
    <fullName>NPPES_Specialty_c__c</fullName>
    <externalDeveloperName>NPPES_Specialty__c</externalDeveloperName>
    <label>NPPES Specialty</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>