knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/NRP_c__c.field-meta.xml
<CustomField>
    <fullName>NRP_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>NRP__c</externalDeveloperName>
    <label>NRP</label>
    <type>Checkbox</type>
</CustomField>