knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/NRP_Expiration_Date_c__c.field-meta.xml
<CustomField>
    <fullName>NRP_Expiration_Date_c__c</fullName>
    <externalDeveloperName>NRP_Expiration_Date__c</externalDeveloperName>
    <label>NRP Expiration Date</label>
    <type>Date</type>
</CustomField>