knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Number_of_years_experience_c__c.field-meta.xml
<CustomField>
    <fullName>Number_of_years_experience_c__c</fullName>
    <externalDeveloperName>Number_of_years_experience__c</externalDeveloperName>
    <label>Number of years experience</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>