knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/of_Inactive_PFA_s_c__c.field-meta.xml
<CustomField>
    <fullName>of_Inactive_PFA_s_c__c</fullName>
    <externalDeveloperName>of_Inactive_PFA_s__c</externalDeveloperName>
    <label># of Inactive PFA&apos;s</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>