knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Offlice_Location_c__c.field-meta.xml
<CustomField>
    <fullName>Offlice_Location_c__c</fullName>
    <externalDeveloperName>Offlice_Location__c</externalDeveloperName>
    <label>Office Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>