knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/OIG_Disqualified_c__c.field-meta.xml
<CustomField>
    <fullName>OIG_Disqualified_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>OIG_Disqualified__c</externalDeveloperName>
    <label>OIG Disqualified</label>
    <type>Checkbox</type>
</CustomField>