knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Onbase_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Onbase_ID_c__c</fullName>
    <externalDeveloperName>Onbase_ID__c</externalDeveloperName>
    <label>Onbase ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>