knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/OneApp_PhyID_c__c.field-meta.xml
<CustomField>
    <fullName>OneApp_PhyID_c__c</fullName>
    <externalDeveloperName>OneApp_PhyID__c</externalDeveloperName>
    <label>OneApp PhyID</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>