knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Open_to_Relocation_c__c.field-meta.xml
<CustomField>
    <fullName>Open_to_Relocation_c__c</fullName>
    <externalDeveloperName>Open_to_Relocation__c</externalDeveloperName>
    <label>Open to Relocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>