knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Origin_c__c.field-meta.xml
<CustomField>
    <fullName>Origin_c__c</fullName>
    <externalDeveloperName>Origin__c</externalDeveloperName>
    <label>Origin</label>
    <length>30</length>
    <type>Text</type>
</CustomField>