knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Original_Lead_Source_c__c.field-meta.xml
<CustomField>
    <fullName>Original_Lead_Source_c__c</fullName>
    <externalDeveloperName>Original_Lead_Source__c</externalDeveloperName>
    <label>Original Lead Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>