knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Other_EMR_Experience_c__c.field-meta.xml
<CustomField>
    <fullName>Other_EMR_Experience_c__c</fullName>
    <externalDeveloperName>Other_EMR_Experience__c</externalDeveloperName>
    <label>Other EMR Experience</label>
    <type>TextArea</type>
</CustomField>