knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Other_External_Interviews_c__c.field-meta.xml
<CustomField>
    <fullName>Other_External_Interviews_c__c</fullName>
    <externalDeveloperName>Other_External_Interviews__c</externalDeveloperName>
    <label>Other External Interviews</label>
    <type>TextArea</type>
</CustomField>