knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Other_Fax_c__c.field-meta.xml
<CustomField>
    <fullName>Other_Fax_c__c</fullName>
    <externalDeveloperName>Other_Fax__c</externalDeveloperName>
    <label>Other Fax</label>
    <type>Phone</type>
</CustomField>