knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Other_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Other_Name_c__c</fullName>
    <externalDeveloperName>Other_Name__c</externalDeveloperName>
    <label>Other Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>