knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Other_Phone_Ext_c__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone_Ext_c__c</fullName>
    <externalDeveloperName>Other_Phone_Ext__c</externalDeveloperName>
    <label>Other Phone Ext</label>
    <length>20</length>
    <type>Text</type>
</CustomField>