knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/OtherStreet__c.field-meta.xml
<CustomField>
    <fullName>OtherStreet__c</fullName>
    <externalDeveloperName>OtherStreet</externalDeveloperName>
    <label>Other Street</label>
    <type>TextArea</type>
</CustomField>