knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/PA_c__c.field-meta.xml
<CustomField>
    <fullName>PA_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>PA__c</externalDeveloperName>
    <label>PA</label>
    <type>Checkbox</type>
</CustomField>