knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Paid_Ad_Lead_c__c.field-meta.xml
<CustomField>
    <fullName>Paid_Ad_Lead_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Paid_Ad_Lead__c</externalDeveloperName>
    <label>Paid Ad Lead</label>
    <type>Checkbox</type>
</CustomField>