knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/PALS_c__c.field-meta.xml
<CustomField>
    <fullName>PALS_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>PALS__c</externalDeveloperName>
    <label>PALS</label>
    <type>Checkbox</type>
</CustomField>