knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Partnership_Tax_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Tax_ID_c__c</fullName>
    <externalDeveloperName>Partnership_Tax_ID__c</externalDeveloperName>
    <label>Partnership Tax ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>