knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Past_Malpractice_Claims_c__c.field-meta.xml
<CustomField>
    <fullName>Past_Malpractice_Claims_c__c</fullName>
    <externalDeveloperName>Past_Malpractice_Claims__c</externalDeveloperName>
    <label>Past Malpractice Claims</label>
    <length>255</length>
    <type>Text</type>
</CustomField>