knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Payroll_Address_c__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Address_c__c</fullName>
    <externalDeveloperName>Payroll_Address__c</externalDeveloperName>
    <label>Payroll Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>