knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Pending_Level_Requests_c__c.field-meta.xml
<CustomField>
    <fullName>Pending_Level_Requests_c__c</fullName>
    <externalDeveloperName>Pending_Level_Requests__c</externalDeveloperName>
    <label>Pending Level Requests</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>